se agrego un segundo html

--- a/pages/page-one.html
+++ b/pages/page-one.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -10,30 +10,302 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&family=Alkalami&family=Dancing+Script:wght@400;500;600;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Document</title>
+    <title>La Cocina de Oliver - cocina</title>
 </head>
 
 <body>
     <header>
-        <div class="titulo">
-            <h1><a href=""> La Cocina de Oliver</a></h1>
+        <div class="header__top">
+            <p>Telefono:(011)2345-6789</p>
+            <p>¡Envios a todo capital!</p>
+            <p>lacocinadeoliver@gmail.com.ar</p>
         </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="">Cocina</a></li>
-                <li><a href="">Pastelería</a></li>
-                <li><a href="">Contacto</a></li>
-            </ul>
-        </nav>
+        <div class="header__bottom">
+            <div class="titulo">
+                <h1><a href="../index.html"> La Cocina de Oliver</a></h1>
+            </div>
+            <div class="header__form">
+                <form action="">
+                    <input type="text" placeholder="Buscar...">
+                    <input type="submit" value="" class="btn-submit">
+                </form>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./page-one.html">Cocina</a></li>
+                    <li><a href="./page-two.html">Pastelería</a></li>
+                    <li class="como-comprar"><a href="./page-three.html">Cómo comprar</a></li>
+                    <li><a href="./page-four.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <p class="data">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat, corporis quod
-            autem odit minima vero distinctio voluptas sint ullam voluptatum natus omnis, aliquam dolorem et expedita
-            ut, reiciendis quae! Nam officiis ratione, fuga eos neque hic molestias, exercitationem porro ullam nostrum,
-            delectus distinctio illum architecto! In quasi delectus eius.</p>
+        <section>
+            <h2>Nuestros platos</h2>
+            <div class="scroll">
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+        </section>
+        <section>
+            <h2>Platos Veganos</h2>
+            <div class="scroll">
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+        </section>
+
+
+
+
+
     </main>
+
+
+    <footer>
+        <hr>
+        <div class="footer__info">
+            <div class="footer__redes">
+                <h3>Redes</h3>
+                <ul>
+                    <li>
+                        <a href="">
+                            <i class="bi bi-instagram"></i>
+                            <p class="p-redes">Instagram</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="bi bi-linkedin"></i>
+                            <p class="p-redes">Linkedin</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="bi bi-facebook"></i>
+                            <p class="p-redes">Facebook</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="bi bi-tiktok"></i>
+                            <p class="p-redes">Tik Tok</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__contacto">
+                <h3>Contaco</h3>
+                <ul>
+                    <li>
+                        <i class="bi bi-envelope"></i>lacocinadeoliver@gmail.com.ar
+                    </li>
+                    <li>
+                        <i class="bi bi-telephone"></i>(011)2345-6789
+                    </li>
+                    <li>
+                        <i class="bi bi-geo-alt-fill"></i>Av. Corrientes 992, CABA
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__navegacion">
+                <h3>Navegacion</h3>
+                <ul>
+                    <li>
+                        <a href="./page-one.html">Cocina</a>
+                    </li>
+                    <li>
+                        <a href="./page-two.html">Pasteleria</a>
+                    </li>
+                    <li>
+                        <a href="./page-four.html">Cómo comprar</a>
+                    </li>
+                    <li>
+                        <a href="./page-three.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer__bottom">
+            <p>Copyright La Cocina de Oliver - 2022. Todos los derechos reservados.</p>
+            <p>Defensa de las y los consumidores. Para reclamos <a
+                    href="https://autogestion.produccion.gob.ar/consumidores"> ingrese aquí</a></p>
+        </div>
+    </footer>
 </body>
 
 </html>
