--- a/pages/page-three.html
+++ b/pages/page-three.html
@@ -11,8 +11,8 @@
         href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&family=Alkalami&family=Dancing+Script:wght@400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/styles.css">
-    <title>La Cocina de Oliver</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>La Cocina de Oliver - Cómo comprar</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         </div>
         <div class="header__bottom">
             <div class="titulo">
-                <h1><a href="./index.html"> La Cocina de Oliver</a></h1>
+                <h1><a href="../index.html"> La Cocina de Oliver</a></h1>
             </div>
             <div class="header__form">
                 <form action="">
@@ -34,36 +34,111 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./pages/page-one.html">Cocina</a></li>
-                    <li><a href="./pages/page-two.html">Pastelería</a></li>
-                    <li class="como-comprar"><a href="./pages/page-three.html">Cómo comprar</a></li>
-                    <li><a href="./pages/page-four.html">Contacto</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./page-one.html">Cocina</a></li>
+                    <li><a href="./page-two.html">Pastelería</a></li>
+                    <li class="como-comprar"><a href="./page-three.html">Cómo comprar</a></li>
+                    <li><a href="./page-four.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <div class="data">
-            <p class="data__base">Bienvenido a La Cocina de Oliver!</p>
-            <p> Disfruta de nuestra selección de menú de cocina y pastelería.</p>
-        </div>
         <section>
-            <h2>Oferta</h2>
-            <div class="galeria">
-            <article class="oferta">
-                <div class="tarjeta__oferta">
-                    <img src="./herramientas/img/torta-oreo.jpg" alt="" class="tarjeta__oferta--img">
-                    <h2><a href="">Barritas de leche condensada vegana y chocolate con tortilla de chocolate</a></h2>
-                    <p class="tarjeta__precio--oferta">$4.400</p>
-                    <a href="" class="oferta__btn"><p class="btn">Pedilo YA!!</p></a>
-                </div>
-            </article>
-        </div>
+            <h2>Nuestros platos</h2>
+            <div class="scroll">
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
         </section>
         <section>
-            <h2>Cocina Destacada</h2>
-            <div class="galeria">
+            <h2>Platos Veganos</h2>
+            <div class="scroll">
                 <article>
                     <a href="">
                         <div class="tarjeta">
@@ -96,46 +171,71 @@
                     <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
                 </div></a>
                 </article>
-                
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+                <article>
+                    <a href="">
+                        <div class="tarjeta">
+                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                    <p class="tarjeta__precio">$4.400</p>
+                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                </div></a>
+                </article>
+        </section>
 
-        </section>
-        <section>
-            <h2>Pastelería Destacada</h2>
-            <div class="galeria">
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-        </section>
+
+
+
+        
     </main>
+
+
     <footer>
         <hr>
         <div class="footer__info">
@@ -186,16 +286,16 @@
                 <h3>Navegacion</h3>
                 <ul>
                     <li>
-                        <a href="./pages/page-one.html">Cocina</a>
+                        <a href="./page-one.html">Cocina</a>
                     </li>
                     <li>
-                        <a href="./pages/page-two.html">Pasteleria</a>
+                        <a href="./page-two.html">Pasteleria</a>
                     </li>
                     <li>
-                        <a href="./pages/page-four.html">Cómo comprar</a>
+                        <a href="./page-four.html">Cómo comprar</a>
                     </li>
                     <li>
-                        <a href="./pages/page-three.html">Contacto</a>
+                        <a href="./page-three.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -207,4 +307,5 @@
         </div>
     </footer>
 </body>
+
 </html>
